# dnd_MPC

./: CONTRIBUTING.md  README.md  TESTING.md  mcp-config.example.json  pyproject.toml  requirements.txt
src/: __init__.py
src/servers/DnD_character/: README.md  __init__.py  character_manager.py  server.py  tools.py
src/servers/DnD_dice/: README.md  __init__.py  dice_roller.py  server.py  tools.py
src/servers/DnD_monster/: README.md  __init__.py  monster_manager.py  server.py  tools.py
src/servers/hello_world/: __init__.py  server.py
tests/: test_dice_roller.py  test_server_integration.py
tests/DnD_character/: test_smoke.py  test_tools.py
tests/DnD_dice/: test_smoke.py  test_tools.py
tests/DnD_monster/: test_smoke.py  test_tools.py
